error.txt
Topic5McLaughlin.c:20:1: error: C++ style comments are not allowed in ISO C90
   20 | // forward declarations
      | ^
Topic5McLaughlin.c:20:1: note: (this will be reported only once per input file)
